--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "blake"
-description = "Implementation of the BLAKE hash function via FFI for Rust"
+description = "Implementation of the BLAKE hash function for Rust via FFI"
 documentation = "https://cdn.rawgit.com/nabijaczleweli/blake-rs/doc/blake/index.htmlhtml"
 repository = "https://github.com/nabijaczleweli/blake-rs"
 readme = "README.md"
