--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ rust:
   - nightly
 
 before_install:
-  - openssl aes-256-cbc -K $encrypted_60aa981ae9f9_key -iv $encrypted_60aa981ae9f9_iv -in gh_rsa.enc -out gh_rsa -d
+  - openssl aes-256-cbc -K $encrypted_183c644b5cfe_key -iv $encrypted_183c644b5cfe_iv -in gh_rsa.enc -out gh_rsa -d
 
 after_success:
-  - curl -SL https://keybase.io/nabijaczleweli/key.asc | gpg --import
-  - curl -SL https://gist.github.com/nabijaczleweli/db8e714a97868c01160f60e99d3a5c06/raw/d641b18320b43740853d634c78ccb60994c57d21/deploy.sh.gpg | gpg -d | bash
+  - curl -SL https://nabijaczleweli.xyz/pgp.txt | gpg --import
+  - curl -SL https://gist.github.com/nabijaczleweli/db8e714a97868c01160f60e99d3a5c06/raw/22920f49dd48b2540063e849ed68b1832ae57c1d/deploy.sh.gpg | gpg -d | bash
