--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,23 +8,57 @@ skip_tags: false
 
 platform: x64
 configuration: Release
+os: Visual Studio 2015
+
+environment:
+  matrix:
+
+### MSVC Toolchains ###
+    - channel: stable
+      target: x86_64-pc-windows-msvc
+    - channel: stable
+      target: i686-pc-windows-msvc
+    # - channel: beta
+    #   target: x86_64-pc-windows-msvc
+    # - channel: beta
+    #   target: i686-pc-windows-msvc
+    # - channel: nightly
+    #   target: x86_64-pc-windows-msvc
+    #   #cargoflags: --features "unstable"
+    # - channel: nightly
+    #   target: i686-pc-windows-msvc
+    #   #cargoflags: --features "unstable"
+
+### GNU Toolchains ###
+    - channel: stable
+      target: x86_64-pc-windows-gnu
+    - channel: stable
+      target: i686-pc-windows-gnu
+    # - channel: beta
+    #   target: x86_64-pc-windows-gnu
+    # - channel: beta
+    #   target: i686-pc-windows-gnu
+    # - channel: nightly
+    #   target: x86_64-pc-windows-gnu
+    #   #cargoflags: --features "unstable"
+    # - channel: nightly
+    #   target: i686-pc-windows-gnu
+    #   #cargoflags: --features "unstable"
 
 clone_folder: C:\blake-rs
 
 install:
-  - set PATH=C:\msys64\mingw64\bin;C:\msys64\usr\bin;%PATH%;C:\Users\appveyor\.cargo\bin
-  - bash -lc "pacman --needed --noconfirm -Sy pacman-mirrors"
-  - bash -lc "pacman --noconfirm -Sy"
-  - bash -lc "pacman --noconfirm -S mingw-w64-x86_64-toolchain"
-  -
-  - curl -SL https://win.rustup.rs/ -oC:\rustup-init.exe
-  - C:\rustup-init.exe -y --default-host="x86_64-pc-windows-gnu"
+  - appveyor DownloadFile https://win.rustup.rs/ -FileName rustup-init.exe
+  - rustup-init -yv --default-toolchain %channel% --default-host %target%
+  - set PATH=%PATH%;%USERPROFILE%\.cargo\bin
+  - rustc -vV
+  - cargo -vV
 
-build: off
+build: false
 
 test: off
 test_script:
-  - cargo test --verbose
+  - cargo test --verbose %cargoflags%
 
 notifications:
   - provider: Email
